# programacion2proyecto

./: CMakeLists.txt  Documentación - RIVALFRONTIERS2.md  README.md  clases.cpp  clases.h  main.cpp
src/: main.cpp
src/controladores/: ControladorJugador.cpp  ControladorJugador.h  ControladorSistema.cpp  ControladorSistema.h
src/interfaz/: InterfazConsola.cpp  InterfazConsola.h  Reportes.cpp  Reportes.h
src/juego/: Juego.cpp  Juego.h
src/modelos/: Edificio.cpp  Edificio.h  Mapa.cpp  Mapa.h  Terreno.cpp  Terreno.h  Unidad.cpp  Unidad.h
src/sistemas/: SistemaCombate.cpp  SistemaCombate.h  SistemaRecursos.cpp  SistemaRecursos.h
src/utilidades/: Persistencia.cpp  Persistencia.h  Utilidades.cpp  Utilidades.h
